Move data folder into backend and update path resolution for REFINER_OUTPUT_DIR

--- a/env.example
+++ b/env.example
@@ -31,6 +31,11 @@ API_BACKOFF_START=1.0
 API_BACKOFF_CAP=8.0
 
 # Output Directories
+# If relative, it's resolved relative to backend directory. Default: backend/data/output
+# Examples:
+#   REFINER_OUTPUT_DIR=data/output          (relative to backend/)
+#   REFINER_OUTPUT_DIR=/app/data/output     (absolute path)
+#   REFINER_OUTPUT_DIR=C:\data\output       (absolute Windows path)
 REFINER_OUTPUT_DIR=data/output
 
 # Logging
